<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_event">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Thêm môn học" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/event_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:hint="Tên môn học"
            android:inputType="textCapSentences"
            android:maxLength="180" />

        <EditText
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_title"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:hint="Phòng số"
            android:inputType="textCapSentences"
            android:maxLength="20" />

        <EditText
            android:id="@+id/event_tietbd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_location"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="250dp"
            android:hint="Tiết bắt đầu"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/event_sotiet"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_location"
            android:layout_marginStart="-190dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="250dp"
            android:layout_toEndOf="@id/event_tietbd"
            android:layout_toRightOf="@id/event_tietbd"
            android:ellipsize="end"
            android:maxLines="1"
            android:hint="Số tiết học" />
        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_tietbd"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:hint="Nội dung"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="180" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tbackground">

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/event_dateend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_date"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/date_end"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/event_timeend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_time"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/event_reminder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_bell_vector"/>
        <TextView
            android:id="@+id/event_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/event_reminder_image"
            android:textSize="17dp"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
            android:text="@string/reminder"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:paddingRight="16dp"
            android:layout_marginLeft="4dp" />
    </RelativeLayout>

</LinearLayout>